# TESTE-GIT

./: README.md  calcular rank.py  classes.py  operacao.py
AUTO/: pyproject.toml
BACK-END/: pyproject.toml
BACK-END/src/back_end/: back.py  meu_banco.db
BACK-END/src/model/: back.py
Lessons/: install.py  operacao.py  repet.py
TESTE-GIT/: concatenar.py  repet.py
TESTE-GIT/my_back_end/: pyproject.toml
