[project]
name = "back-end"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro-Dev0",email = "henripedro652@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]

[tool.poetry]
packages = [{include = "back_end", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "sql (>=2022.4.0,<2023.0.0)"
]
